Bug 168228 - Autorrect->Apply removes paragraph formatting
Summary: Autorrect->Apply removes paragraph formatting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2025-09-01 12:19 UTC by Samuel Mehrbrodt
Modified: 2025-12-08 06:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Bugdoc (23.07 KB, application/vnd.oasis.opendocument.text)
2025-09-01 13:30 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2025-09-01 12:19:54 UTC
1. Open bugdoc
2. Ensure all options in Autocorrect->Options in the [M] column are *not* ticked
3. Tools->Autocorrect->Apply

Expected:
No changes to document

Actual:
Paragraph formatting (paragraph style, font size, paragraph spacing) has been changed.
Comment 1 Samuel Mehrbrodt 2025-09-01 13:30:52 UTC
Created attachment 202641 [details]
Bugdoc
Comment 2 m_a_riosv 2025-09-01 15:59:57 UTC
Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f6a200a9702bab97345b0ce465af431ba2ce9806
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (es_ES); UI: en-US
Calc: CL threaded
Comment 3 BogdanB 2025-09-02 02:29:34 UTC
Also in
Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 BogdanB 2025-09-02 02:36:58 UTC
Also in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2709d6bcf248a072abdc6e219466727f52dc159b
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2025-11-10 07:22:57 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5bd1efb830400e1394d45f122faf7537e4451f33

tdf#168228 Don't replace styles unconditionally

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-11-10 08:25:09 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f2c92a806f6211f30644df9a3f141640130c29ca

tdf#168228 Don't replace styles unconditionally

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2025-11-22 19:14:10 UTC
I verified that paragraph is not changing....
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f8224b9625c26a7c92a289573765d4a201678d68
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

... but as a note: when I close the document it is asking me if I want to save. Why if nothing is changed?...