tdf#168228 Don't replace styles unconditionally

When using Autocorrect->Apply, styles were applied unconditionally.

Add a second checkbox to allow disabling "Apply styles" in that case.

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190955
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@collabora.com>

 Conflicts:
	editeng/source/misc/acorrcfg.cxx
	sw/qa/extras/uiwriter/uiwriter2.cxx
	sw/source/core/edit/autofmt.cxx

Change-Id: I4891f906b5518f518f3ac3e256e21392ade3f824
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193718
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@collabora.com>