sw/source/core/edit/autofmt.cxx
@@ -2244,7 +2244,7 @@ SwAutoFormat::SwAutoFormat( SwEditShell* pEdShell, SvxSwAutoFormatFlags const & 
     if( m_aFlags.bSetNumRule && !m_aFlags.bAFormatByInput )
         m_aFlags.bSetNumRule = false;
 
-    bool bReplaceStyles = !m_aFlags.bAFormatByInput || m_aFlags.bReplaceStyles;
+    bool bReplaceStyles = m_aFlags.bAFormatByInput ? m_aFlags.bReplaceStylesByInput : m_aFlags.bReplaceStyles;
 
     const SwTextFrame * pNextFrame = nullptr;
     bool bNxtEmpty = false;
@@ -2562,7 +2562,10 @@ SwAutoFormat::SwAutoFormat( SwEditShell* pEdShell, SvxSwAutoFormatFlags const & 
                 else if( bReplaceStyles )
                     eStat = nLevel ? TST_IDENT : TST_NEG_IDENT;
                 else
+                {
                     eStat = READ_NEXT_PARA;
+                    BuildText();
+                }
             }
             break;
 
@@ -2811,6 +2814,7 @@ void SwEditShell::SetAutoFormatFlags(SvxSwAutoFormatFlags const * pFlags)
     pEditFlags->bSetBorder      = pFlags->bSetBorder;
     pEditFlags->bCreateTable    = pFlags->bCreateTable;
     pEditFlags->bReplaceStyles  = pFlags->bReplaceStyles;
+    pEditFlags->bReplaceStylesByInput = pFlags->bReplaceStylesByInput;
     pEditFlags->bAFormatByInpDelSpacesAtSttEnd =
                                     pFlags->bAFormatByInpDelSpacesAtSttEnd;
     pEditFlags->bAFormatByInpDelSpacesBetweenLines =
